# floweb-domain-models

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  generate-python-models.js  generate-types.js  index.d.ts  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: publish.yml
__tests__/: types.test.ts
examples/: environment-example.json  flow-example.json  performance-test-example.json
python-models/: __init__.py  action-configs.py  debug.py  environment.py  execution-results.py  flow-validation.py  flow.py  parallel-execution.py  performance-test.py  setup.py  websocket-communication.py
python-models/floweb_models/: __init__.py  action_configs.py  debug.py  debug_models.py  environment.py  execution_results.py  flow.py  parallel_execution.py  performance_test.py  websocket_communication.py
schemas/: action-configs.json  debug.json  environment.json  execution-results.json  flow-validation.json  flow.json  parallel-execution.json  performance-test.json  websocket-communication.json
src/floweb_domain_models/: __init__.py
